--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "json-server": "^0.17.0",
+    "material-ui": "^1.0.0-beta.47",
+    "next": "12.0.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "eslint": "8.5.0",
