--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export" 
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -15,10 +16,10 @@
     "next": "12.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-toastify": "^8.1.0"
+    "react-toastify": "^8.1.0"   
   },
   "devDependencies": {
-    "eslint": "8.5.0",
+    "eslint": "7.7.0",
     "eslint-config-next": "12.0.7"
   }
 }
