--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lint": "next lint",
     "export": "next export" 
   },
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
