--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export" 
+    "export": "next export"
   },
   "extends": "next",
   "rules": {
@@ -20,8 +20,9 @@
     "material-ui": "^1.0.0-beta.47",
     "next": "12.0.1",
     "react": "17.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.1",
-    "react-toastify": "^8.1.0"   
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "eslint": "7.7.0",
